syntax = "proto3";

message Cancel {
  int64 request_id = 1;
}
