syntax = "proto3";

message Challenge {
  string auth_method = 1;
  string challenge = 2;
}
